Actions
Bug #9357
closedvgrind: this statement may fall through
Start date:
2018-03-26
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
vfontedpr.c: In function 'putcp': vfontedpr.c:793:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (c < 040) ^ vfontedpr.c:795:2: note: here case '\t': ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 93b546c082a8b32824a000a5be13e5aa9c84d208
commit 93b546c082a8b32824a000a5be13e5aa9c84d208 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9357 vgrind: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions