9357 vgrind: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>